<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/Man"
        android:layout_width="219dp"
        android:layout_height="211dp"
        android:elevation="4dp"
        android:src="@drawable/boy_with_red_shirt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/entrar"
        android:textAppearance="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/texto_1"
        android:layout_width="317dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568">

        <TextView
            android:id="@+id/todos_os_po"
            android:layout_width="321dp"
            android:layout_height="78dp"
            android:gravity="center_horizontal|top"
            android:text="@string/que_bom_te_ver"
            android:textAppearance="@style/title" />

        <TextView
            android:id="@+id/acesse_uma_"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@+id/todos_os_po"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="1dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/como_deseja"
            android:textAppearance="@style/paragraph_text" />

    </RelativeLayout>



    <Button
        android:id="@+id/button1"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/blue"
        android:text="@string/continuar_com_google"
        android:textAppearance="@style/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" >
    </Button>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="28dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:srcCompat="@drawable/google_icon" />

    <Button
        android:id="@+id/button2"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/blue"
        android:text="@string/continuar_com_facebook"
        android:textAppearance="@style/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <Button
        android:id="@+id/button3"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/white"
        android:text="@string/continuar_com_email"
        android:textAppearance="@style/button_text"
        android:textColor="@color/blue"
        android:onClick="transitionLoginActivityToLoginFormActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/facebook_icon_round_edge" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:backgroundTint="@color/white"
        android:onClick="onBackPressedRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/icon_back" />


</androidx.constraintlayout.widget.ConstraintLayout>