<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SucessfulLoginActivity">

    <ImageView
        android:id="@+id/Man"
        android:layout_width="248dp"
        android:layout_height="286dp"
        android:elevation="4dp"
        android:src="@drawable/gary_and_girl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <RelativeLayout
        android:id="@+id/texto_1"
        android:layout_width="322dp"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795">

        <TextView
            android:id="@+id/todos_os_po"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-3dp"
            android:gravity="center_horizontal|top"
            android:text="@string/seja_bem_vindo"
            android:textAppearance="@style/paragraph_text"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/acesse_uma_"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/bem_vindo_de_volta"
            android:textAppearance="@style/title" />
    </RelativeLayout>

    <Button
        android:id="@+id/continueRegisterEmail"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/blue"
        android:onClick="transitionFromSucessfulLoginActivityToHomePageActivity"
        android:text="@string/criar_conta"
        android:textAppearance="@style/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

</androidx.constraintlayout.widget.ConstraintLayout>